# Reax

./: .dockerignore  .env.example  .gitignore  COMPLETION_SUMMARY.md  CONFIGURATION_CHECK.md  CORRECT_LOCAL_NETWORK_SETUP.md  DEEP_ANALYSIS.md  DEMO_SCRIPT.md  DEPENDENCIES.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  DOCUMENTATION.md  Dockerfile  FRONTEND_INTERACTIVE_COMPLETE.md  GEMINI_SETUP_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  LINERA_0.15.7_UPDATE.md  LINERA_FIX_PLAN.md  LINERA_INTEGRATION_GUIDE.md  LOCAL_WALLET_SETUP.md  QUICK_START.md  README.md  RUNNING_NOW.md  RUST_COMPILATION_NOTE.md  SDK_0.15.3_FIXES.md  SETUP_REQUIRED.md  START_ALL.md  START_PROJECT.md  TESTNET_CONWAY_COMPLETE.md  TESTNET_CONWAY_SETUP.md  UPDATE_COMPLETE.md  WHATS_LEFT.md  WSL_CORRECT_STEPS.md  WSL_DEPLOYMENT_STEPS.md  compose.yaml  debug-start.sh  docker-compose.yml  (+19 more)
.kiro/specs/linera-trade-ai/: design.md  requirements.md  tasks.md
.kiro/specs/linera-workspace-migration/: design.md  requirements.md  tasks.md
.kiro/specs/trading-platform-enhancement/: design.md  requirements.md  tasks.md
backend/: .dockerignore  .env.example  Dockerfile  SETUP_NOTES.md  package.json
backend/scripts/: test-jupiter-key.js
backend/src/: analytics.ts  auto-order-service.ts  backtesting.ts  database.ts  index.ts  linera-client-cli.ts  linera-client-legacy.ts  linera-client.ts  redis-client.ts  routes.ts  suggestion-engine.ts
backend/src/database/: connection.ts  schema.sql
backend/src/models/: dex.ts
backend/src/pinescript/: ast.ts  compiler.ts  executor.ts  indicators.ts  lexer.ts  parser.ts
backend/src/routes/: dex.ts  linera-proxy.ts  pinescript.ts  strategies.ts  strategy-microchain.ts  visual-strategy.ts
backend/src/services/: binance-service.ts  dex-router.ts  jupiter-service.ts  linera-storage.ts  notification-service.ts  pinescript-service.ts  raydium-service.ts  strategy-microchain-service.ts  websocket-server.ts
backend/src/strategy-builder/: blocks.ts  code-generator.ts  validator.ts
docker/: linera-entrypoint.sh
frontend/: .dockerignore  .env.container  .env.local.new  Dockerfile  NEXTJS_SETUP.md  next.config.js  package.json
frontend/public/: linera-setup.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActivityLog.tsx  AdvancedOrderForm.tsx  AuthProvider.tsx  BacktestingUI.tsx  CodeStrategyBuilder.tsx  Dashboard.tsx  DexIntegrations.tsx  DisclaimerModal.tsx  FormStrategyBuilder.tsx  Header.tsx  ImportTweetsButton.tsx  LineraProvider.tsx  MetricCard.tsx  MicrochainContext.tsx  MonitoredUsers.tsx  Navigation.tsx  OrdersList.tsx  PerformanceChart.tsx  PineScriptEditor.tsx  PredictionMarkets.tsx  SafetyConfigPanel.tsx  Sidebar.tsx  SignIn.tsx  (+13 more)
ingestion/: package.json
ingestion/src/: index.ts  test-user.ts
linera-app/: Cargo.toml  Dockerfile  MIGRATION.md  linera.toml  rust-toolchain.toml  stderr.txt
linera-app/abi/: Cargo.toml
linera-app/abi/src/: lib.rs  tests.rs
linera-app/src/: contract.rs  lib.rs  service.rs  state.rs
linera-app/trade-ai/: Cargo.toml
linera-app/trade-ai/src/: contract.rs  service.rs  state.rs
parser/: package.json
parser/src/: ai-parser.js  ai-parser.ts  dsl-parser.ts  index.ts
relayer/: package.json
relayer/src/: index.ts
(+24 files in other folders)
