[package]
name = "linera-trade-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use version 0.15.5 to match the buildathon template
linera-sdk = "0.15.5"
linera-views = "0.15.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
bcs = "0.1"

[lib]
crate-type = ["cdylib"]