[workspace]
resolver = "2"
members = ["abi", "trade-ai"]

[workspace.dependencies]
linera-sdk = { version = "0.15.6" }
async-graphql = { version = "=7.0.17", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bcs = { version = "0.1" }
thiserror = { version = "1.0" }
async-trait = { version = "0.1" }
abi = { path = "./abi" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
