[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = { workspace = true }
serde = { workspace = true }
async-graphql = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
serde_json = { workspace = true }
bcs = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
