[package]
name = "linera-trade-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { workspace = true }
linera-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bcs = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
linera-views = "0.15.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[lib]
crate-type = ["cdylib", "rlib"]
