[package]
name = "trade-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { workspace = true }
linera-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bcs = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
linera-views = "0.15.7"
tokio = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40", features = ["full"] }

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "trade-ai_contract"
path = "src/contract.rs"

[[bin]]
name = "trade-ai_service"
path = "src/service.rs"


